test/cases/compile_errors/stage2/comptime_unreachable.zig
pub export fn entry() void {
    comptime unreachable;
}

// error
//
// :2:14: error: reached unreachable code
